# VeriGHC

./: .gitignore  .gitmodules  CoqMakefile.local  HsToCoqMakefile  LICENSE  Makefile  README.md  _CoqProject  coq-VeriGHC.opam  edits
cmm/: CmmExpr_sem.v  CmmNode_sem.v  CmmType_sem.v  Cmm_sem.v  Identifiers.v  Makefile  _CoqProject  cmm.v  heap.v
cmmCore/: CmmCoreExpr.v  CmmCoreType.v
common/: HaskellValues.v  Makefile  _CoqProject
ghc/: BlockId.v  Cmm.v  CmmExpr.v  CmmMachOp.v  CmmNode.v  CmmSwitch.v  CmmType.v  Instr.v  Int.v  Label.v  Makefile  OrdList.v  Reg.v  Unique.v  Word.v  _CoqProject
gpfsl_cmm/: lang.v
manual/: AxiomatizedTypes.v
manual/Hoopl/: Block.v  Graph.v
manual/PPC/: CodeGen.v
module-edits/BlockId/: edits
module-edits/CLabel/: edits
module-edits/Cmm/: edits
module-edits/CmmExpr/: edits  midamble.v
module-edits/CmmMachOp/: edits
module-edits/CmmNode/: edits
module-edits/CmmSwitch/: edits
module-edits/CmmType/: edits
module-edits/CoreSyn/: edits  midamble.v
module-edits/Debug/: edits
module-edits/DynFlags/: edits
module-edits/Format/: edits
module-edits/Hoopl/Label/: edits  midamble.v
module-edits/Hoopl/Unique/: edits  midamble.v
module-edits/Instruction/: edits
module-edits/NCGMonad/: edits  midamble.v
module-edits/PIC/: edits
module-edits/PPC/CodeGen/: edits  midamble.v
module-edits/PPC/Cond/: edits
module-edits/Platform/: edits
module-edits/PprCmmExpr/: edits
module-edits/Reg/: edits
module-edits/SMRep/: edits
module-edits/TargetReg/: edits
nativeGen/: Cond.v  Format.v  Instr.v  Regs.v
(+2 files in other folders)
